# rust_swimming

R00/ex00/: hello  hello.rs
R00/ex01/: min  min.rs
R00/ex02/: collatz  collatz.rs  print_bytes  print_bytes.rs  yes  yes.rs
R00/ex03/: fizzbuzz.rs
R00/ex04/: Cargo.toml
R00/ex04/src/: default.rs  other.rs
R00/ex05/src/: main.rs
R00/ex06/src/: main.rs
R00/ex07/: Cargo.toml
R00/ex07/src/: lib.rs  main.rs
R01/ex00/src/: lib.rs
R01/ex01/src/: lib.rs
R01/ex02/src/: lib.rs
R01/ex03/src/: lib.rs
R01/ex04/src/: lib.rs
R01/ex05/src/: lib.rs  main.rs
R01/ex06/src/: backup.rs  lib.rs  main.rs
